// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParticipantButton with event has a waitlist renders participant button with waitlited message. 1`] = `
<div>
  <WaitlistedButton
    onClick={[Function]}
  />
</div>
`;

exports[`ParticipantButton with event has no waitlist renders participant button with admit message. 1`] = `
<div>
  <RegisterButton
    onClick={[Function]}
  />
</div>
`;
